Fix Text Overflow on Messages in MessageCenter
The last message column in the MessageCenter would stretch indefinitely
to accomodate the message length. Now it truncates the message at 35
characters.

--- a/src/message-center/MessageCenter.scss
+++ b/src/message-center/MessageCenter.scss
@@ -64,8 +64,12 @@ form {
   }
 }
 
-th {
-  &.message-column {
-    text-overflow: clip;
+th,
+td {
+  &.last-message {
+    max-width: 35ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 }
